arm64: dts: clear all of the *_pfm_xp bits for 88pm886 buck
per PMIC silicon team, these bits should be cleared to save power

Change-Id: I8773915a3c8c5772c64514a37d3f31604529278d
Signed-off-by: Yi Zhang <yizhang@marvell.com>

--- a/arch/arm64/boot/dts/88pm886_pxa1908_dkb.dtsi
+++ b/arch/arm64/boot/dts/88pm886_pxa1908_dkb.dtsi
@@ -16,7 +16,13 @@
 	 */
 	marvell,pmic-bd-cfg = <0x1 0xa3 0x7f 0x8>,
 			      <0x1 0xa2 0x30 0x20>,
-			      <0x2 0x06 0x30 0x30>;
+			      <0x2 0x06 0x30 0x30>,
+			      /* disable all of the bk_pfm_xp */
+			      <0x1 0xa0 0x40 0x0>,
+			      <0x1 0xae 0x40 0x0>,
+			      <0x1 0xbc 0x40 0x0>,
+			      <0x1 0xca 0x40 0x0>,
+			      <0x1 0xd8 0x40 0x0>;
 
 	/* ---buck--- */
 	vccmain: regulator-buck1 {
