--- a/arch/arm64/boot/dts/88pm886_pxa1908_dkb.dtsi
+++ b/arch/arm64/boot/dts/88pm886_pxa1908_dkb.dtsi
@@ -107,11 +107,13 @@
 		gpio-en = <0>;
 		flash-en-gpio = <124>;
 		flash-txmsk-gpio = <19>;
-		flash-timer = <0x0A>;	/* 250 ms */
-		cls-ov-set = <0x0>;	/* 4.4V */
-		cls-uv-set = <0x0>;	/* 1.5V */
-		cfd-bst-vset = <0x4>;	/* 4.75V */
-		bst-uvvbat-set = <0x0>;	/* 3.1V */
+		flash-timer = <0x0E>;		/* 500 ms */
+		cls-ov-set = <0x0>;		/* 4.4V */
+		cls-uv-set = <0x0>;		/* 1.5V */
+		cfd-bst-vset = <0x4>;		/* 4.75V */
+		bst-uvvbat-set = <0x0>;		/* 3.1V */
+		max-flash-current = <1200>;	/* mA */
+		max-torch-current = <200>;	/* mA */
 	};
 
 	red: led-rgb0 {
