--- a/arch/arm64/boot/dts/pxa1908.dtsi
+++ b/arch/arm64/boot/dts/pxa1908.dtsi
@@ -926,6 +926,7 @@
 		clocks = <&soc_clocks PXA1U88_CLK_SC2_AXI_CLK>,
 				<&soc_clocks PXA1U88_CLK_SC2_MCLK>;
 		clock-names = "SC2AXICLK", "SC2MCLK";
+		lpm-qos = <PM_QOS_CPUIDLE_BLOCK_AXI>;
 		status = "disabled";
 		reg = <0x0 0x0>;
 	};
@@ -935,6 +936,7 @@
 		clocks = <&soc_clocks PXA1U88_CLK_SC2_AXI_CLK>,
 				<&soc_clocks PXA1U88_CLK_SC2_MCLK>;
 		clock-names = "SC2AXICLK", "SC2MCLK";
+		lpm-qos = <PM_QOS_CPUIDLE_BLOCK_AXI>;
 		status = "disabled";
 		reg = <0x1 0x0>;
 	};
