hwmon: lis3dh: add accelerometer sensor lis3dh in Makefile & Kconfig
Add Makefile & Kconfig for lis3dh

Change-Id: Ia301ca221e4b1b817ebf51dc94e8bde1475a537d
Signed-off-by: Andy Luo <yifeiluo@marvell.com>

--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -1618,6 +1618,18 @@ config SENSORS_STK3X1X
 	Stk3x1x is a light and proximity sensor.
 	Config dts is also needed.
 
+config SENSORS_LIS3DH
+	tristate "ST lid3dh 3-Axid accelerometer device with I2C bus"
+	depends on I2C
+	default n
+	help
+	  Say Y here if you have a lis3dh device on the board and use I2C
+	  communication, else say N.
+
+	  If unsure, say N.
+
+	  To compile this driver as a module, choose M here.
+
 if ACPI
 
 comment "ACPI drivers"
