--- a/drivers/hwmon/Makefile
+++ b/drivers/hwmon/Makefile
@@ -149,6 +149,7 @@ obj-$(CONFIG_SENSORS_APDS9930)	+= apds9930.o
 obj-$(CONFIG_SENSORS_APDS990X_MRVL)	+= apds990x.o
 obj-$(CONFIG_SENSORS_GRIP)	+= grip_sensor.o
 obj-$(CONFIG_SENSORS_STK3X1X)	+= stk3x1x.o
+obj-$(CONFIG_SENSORS_LIS3DH)	+= lis3dh.o
 
 obj-$(CONFIG_PMBUS)		+= pmbus/
 obj-y				+= bmi160/
