hwmon: tsl277x: add pl-sensor tsl277x in Makefile & Kconfig
Add Makefile & Kconfig for tsl277x

Change-Id: I595a288f202419408626abf8eec936c4e385e656
Signed-off-by: Andy Luo <yifeiluo@marvell.com>

--- a/drivers/hwmon/Makefile
+++ b/drivers/hwmon/Makefile
@@ -150,6 +150,7 @@ obj-$(CONFIG_SENSORS_APDS990X_MRVL)	+= apds990x.o
 obj-$(CONFIG_SENSORS_GRIP)	+= grip_sensor.o
 obj-$(CONFIG_SENSORS_STK3X1X)	+= stk3x1x.o
 obj-$(CONFIG_SENSORS_LIS3DH)	+= lis3dh.o
+obj-$(CONFIG_SENSORS_TSL2772)	+= tsl277x.o
 
 obj-$(CONFIG_PMBUS)		+= pmbus/
 obj-y				+= bmi160/
