--- a/drivers/hwmon/Kconfig
+++ b/drivers/hwmon/Kconfig
@@ -1630,6 +1630,19 @@ config SENSORS_LIS3DH
 
 	  To compile this driver as a module, choose M here.
 
+config SENSORS_TSL2772
+	tristate "TAOS TSL2772 proximity and ambient light sensor"
+	depends on I2C
+	default n
+	help
+	  If you say yes here you get support for the TAOS tsl2772,
+	  proximity and ambient light sensors.
+
+	  If unsure, say N.
+
+	  This driver can also be built as a module.  If so, the module
+	  will be called tsl277x.
+
 if ACPI
 
 comment "ACPI drivers"
