--- a/arch/arm64/boot/dts/88pm860_pxa1936_dkb.dtsi
+++ b/arch/arm64/boot/dts/88pm860_pxa1936_dkb.dtsi
@@ -44,8 +44,16 @@
 	};
 
 	headset {
+		marvell,headset-flag = <1>;
+		marvell,hook-press-th = <60>;
+		marvell,vol-up-press-th = <250>;
+		marvell,vol-down-press-th = <500>;
+		marvell,mic-det-th = <600>;
+		marvell,press-release-th = <600>;
+		marvell,micbias-supply = <&ldo20>;
 		status = "okay";
 	};
+
 	dvc {
 		status = "okay";
 	};
