arm64: dts: fix twsi0 disable issue
camera will config twsi0 pins function,
and soc camera will use twsi0,so twsi0 will register first.

Change-Id: Ie4543fbdc49321864801f8f2f95307f9377eb478
Signed-off-by: Owen Zhang <xinzha@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb.dts
@@ -833,12 +833,8 @@
 			};
 
 			twsi0: i2c@d4011000 {
-				pinctrl-names = "default","gpio";
-				pinctrl-0 = <&twsi0_pmx_func>;
-				pinctrl-1 = <&twsi0_pmx_gpio>;
-				i2c-gpio = <&gpio 53 0 &gpio 54 0>;
-				status = "disabled";
-		        };
+				status = "okay";
+		     };
 
 			twsi1: i2c@d4010800 {
 				pinctrl-names = "default","gpio";
