--- a/arch/arm64/boot/dts/88pm830_sp4555557sa.dtsi
+++ b/arch/arm64/boot/dts/88pm830_sp4555557sa.dtsi
@@ -21,6 +21,8 @@
 
 		bat-ntc-support = <1>;
 		bat-capacity = <2000>;	/* mAh */
+		power-off-threshold = <3350>; /* mV */
+		safe-power-off-threshold = <3000>; /* mV */
 
 		ocv-table = <
 			3397 3445 3477 3496 3506 3513 3519 3526 3532 3540
