arm64: dts: disable torch force max current for 88pm886
This patch will clear the flag for forcing max current
for the torch. if max current is requested it is needed
to set this flag to 1

Change-Id: Ic9276f57dfa48d1d04bb13af3a94601389d01ecc
Signed-off-by: Amit Sharon <asharon@marvell.com>

--- a/arch/arm64/boot/dts/88pm886_pxa1908_dkb.dtsi
+++ b/arch/arm64/boot/dts/88pm886_pxa1908_dkb.dtsi
@@ -114,6 +114,7 @@
 		bst-uvvbat-set = <0x0>;		/* 3.1V */
 		max-flash-current = <1200>;	/* mA */
 		max-torch-current = <200>;	/* mA */
+		torch-force-max-current = <0>;
 	};
 
 	red: led-rgb0 {
