arm64: dts: add pmic-type for pxa1908 and pxa1936
We use this flag to notify codec which pmic are we using
on current board.

Change-Id: I76fcd996bfb80781d668fcff567e370a20bf4024
Signed-off-by: Zhao Ye <zhaoy@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb.dts
@@ -943,6 +943,7 @@
 				pmic2: 88pm860@38 {
 					compatible = "marvell,88pm860";
 					reg = <0x38>;
+					marvell,pmic-type = <0>;
 					/* no codec_int currently, comment out now */
 					/*
 					interrupt-parent = <&gpio>;
