--- a/arch/arm64/boot/dts/pxa1908-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1908-dkb.dts
@@ -952,6 +952,7 @@
 				pmic2: 88pm860@38 {
 					compatible = "marvell,88pm860";
 					reg = <0x38>;
+					marvell,pmic-type = <1>;
 					/* no codec_int currently, comment out now */
 					/*
 					interrupt-parent = <&gpio>;
