arm64: dts: unify pxa1936 thermal driver dts
unify the pxa1936 thermal driver dts name.
can avoid potential thermal driver issue.

Change-Id: I636c1206515e500ae0eae624d65aa86e2b0c6d99
Signed-off-by: Liang Chen <chl@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936.dtsi
+++ b/arch/arm64/boot/dts/pxa1936.dtsi
@@ -789,7 +789,7 @@
 			};
 
 			thermal: thermal@d4013300 {
-				compatible = "marvell,pxa28nm-thermal";
+				compatible = "marvell,pxa1936-thermal";
 				reg = <0xd4013300 0x1C>;
 				interrupts = <0 60 0x4>;
 				clocks = <&soc_clocks PXA1936_CLK_THERMAL>;
