arm64: dts: align regulators sleep mode for pxa1908
align the regulators sleep mode for pxa1908:
1. enable sleep mode for BUCK3 and set voltage to 1.2V when system
suspend
2. disable regulators for LDO3, LDO4, LDO8, LDO9, LDO10, LDO13,
LDO16 when system suspend

Change-Id: I70d8df50734e7128098d8868717e3a89c2727682
Signed-off-by: Fenghang Yin <yinfh@marvell.com>

--- a/arch/arm64/boot/dts/88pm886_pxa1908_dkb.dtsi
+++ b/arch/arm64/boot/dts/88pm886_pxa1908_dkb.dtsi
@@ -22,7 +22,25 @@
 			      <0x1 0xae 0x40 0x0>,
 			      <0x1 0xbc 0x40 0x0>,
 			      <0x1 0xca 0x40 0x0>,
-			      <0x1 0xd8 0x40 0x0>;
+			      <0x1 0xd8 0x40 0x0>,
+			      /*
+			       * align regulators sleep mode:
+			       * 1. enable buck3 sleep mode and set it's sleep
+			       * mode voltage to 1.2V
+			       */
+			      <0x1 0xbe 0x30 0x20>,
+			      <0x1 0xbf 0x7f 0x30>,
+			      /*
+			       * 2. disable ldo3, ldo4, ldo8, ldo9, ldo10, ldo13,
+			       * ldo16 when system suspend
+			       */
+			      <0x1 0x2d 0x30 0x00>,
+			      <0x1 0x33 0x30 0x00>,
+			      <0x1 0x4b 0x30 0x00>,
+			      <0x1 0x51 0x30 0x00>,
+			      <0x1 0x57 0x30 0x00>,
+			      <0x1 0x69 0x30 0x00>,
+			      <0x1 0x7b 0x30 0x00>;
 
 	/* ---buck--- */
 	vccmain: regulator-buck1 {
