mfd: 88pm88x: introduce 88pm88x
88pm88x:
    |||
    -||---> means PMIC
     -|---> means "charger integrated"
      ----> means the chip

88pm886/88pm880 will be covered

- replace the MFD_88PM886 in Kconfig:

$ grep -rl "MFD_88PM886" drivers/* | xargs sed -i "s/MFD_88PM886/MFD_88PM88X/g"
$ grep -rl "MFD_88PM886" sound/* | xargs sed -i "s/MFD_88PM886/MFD_88PM88X/g"

- rename:
  drivers/mfd/88pm886-*.c -> drivers/mfd/88pm88x-*.c

- the subdev are still using CONFIG_*88PM886_*

Change-Id: Ifc1272fccdf7d031a5db70863cf84d85a1bb7981
Signed-off-by: Yi Zhang <yizhang@marvell.com>

--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -639,7 +639,7 @@ config VBUS_88PM830
 
 config VBUS_88PM886
 	tristate "Marvell VBUS 88PM886 PMIC/charger/fuel-gauge support"
-	depends on MFD_88PM886
+	depends on MFD_88PM88X
 	help
 	  Say Y here if you have a 88PM886 PMIC/charger/fuel-gauge IC to detect
 	  USB Vbus/IDpin event.
