--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -34,7 +34,7 @@ config INPUT_88PM80X_ONKEY
 
 config INPUT_88PM886_ONKEY
 	tristate "88PM886 ONKEY support"
-	depends on MFD_88PM886
+	depends on MFD_88PM88X
 	help
 	  Support the ONKEY of Marvell 88PM886 PMICs as an input device
 	  reporting power button status.
