--- a/drivers/regulator/Kconfig
+++ b/drivers/regulator/Kconfig
@@ -71,11 +71,11 @@ config REGULATOR_88PM8607
 	  This driver supports 88PM8607 voltage regulator chips.
 
 config REGULATOR_88PM886
-	tristate "Marvell 88PM886 Power regulators"
-	depends on MFD_88PM886
+	tristate "Marvell 88PM88X Power regulators"
+	depends on MFD_88PM88X
 	depends on I2C
 	help
-	  This driver supports Marvell 88PM886 voltage regulator chips.
+	  This driver supports Marvell 88PM88X voltage regulator chips.
 	  It delivers digitally programmable output, the voltage is
 	  programmed via I2C interface.
 	  It has 5 bucks and 16 ldos. Buck1 has DVC feature
