--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -155,7 +155,7 @@ config RTC_DRV_88PM80X
 
 config RTC_DRV_88PM886
 	tristate "Marvell 88PM886"
-	depends on I2C && MFD_88PM886
+	depends on I2C && MFD_88PM88X
 	help
 	  If you say yes here you get support for RTC function in Marvell
 	  88PM886 chips.
