--- a/arch/arm64/boot/dts/88pm886_pxa1908_dkb.dtsi
+++ b/arch/arm64/boot/dts/88pm886_pxa1908_dkb.dtsi
@@ -120,31 +120,39 @@
 	red: led-rgb0 {
 	       led-name = "led0";
 	       led-trigger-name = "timer";
-	       pm886-rgb-breath-mode;
-	       pm886-rgb-breath-speed = <1>;
+	       pm88x-rgb-breath-mode;
+	       pm88x-rgb-breath-speed = <1>;
 
-	       pm886-rgb-current = /bits/ 8 <1>; /* 8 mA */
-	       pm886-rgb-on-percent = /bits/ 8 <50>;
+	       pm88x-rgb-current = /bits/ 8 <1>; /* 8 mA */
+	       pm88x-rgb-on-percent = /bits/ 8 <50>;
 
        };
 
 	green: led-rgb1 {
 	       led-name = "led1";
 	       led-trigger-name = "timer";
-	       pm886-rgb-breath-mode;
-	       pm886-rgb-breath-speed = <2>;
+	       pm88x-rgb-breath-mode;
+	       pm88x-rgb-breath-speed = <2>;
 
-	       pm886-rgb-current = /bits/ 8 <1>; /* 8 mA */
-	       pm886-rgb-on-percent = /bits/ 8 <50>;
+	       pm88x-rgb-current = /bits/ 8 <1>; /* 8 mA */
+	       pm88x-rgb-on-percent = /bits/ 8 <50>;
        };
 
 	blue: led-rgb2 {
 	       led-name = "led2";
 	       led-trigger-name = "timer";
-	       pm886-rgb-breath-mode;
-	       pm886-rgb-breath-speed = <2>;
+	       pm88x-rgb-breath-mode;
+	       pm88x-rgb-breath-speed = <2>;
 
-	       pm886-rgb-current = /bits/ 8 <1>; /* 8 mA */
-	       pm886-rgb-on-percent = /bits/ 8 <50>;
+	       pm88x-rgb-current = /bits/ 8 <1>; /* 8 mA */
+	       pm88x-rgb-on-percent = /bits/ 8 <50>;
        };
+
+	onkey {
+		marvell,pm88x-onkey-gpio-number = <0>;
+	};
+
+	vbus {
+		gpadc-number = <1>;
+	};
 };
