arm64: dts: optimize GPIO10 state for power saving
GPIO10 is configured as input and used for AP or CM3 sensor hub
selection on DKB, when GPIO10 connect to GND, there is leakage
if without PULL_UP setting, so add this configuration.

Note: platforms don't use GPIO10 to select AP or CM3 sensor hub don't
need this patch.

Change-Id: I8ff51713bb5ae9c3df0067d9fe236db4a8fea7f6
Signed-off-by: Feng Hong <hongfeng@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908-dkb.dtsi
+++ b/arch/arm64/boot/dts/pxa1908-dkb.dtsi
@@ -772,10 +772,16 @@
 				senhb_irq_pins_def: senhb_irq_pins_def {
 					pinctrl-single,pins = <
 						GPIO11 AF0
-						GPIO10 AF0
 						GPIO91 AF3
 					>;
 					MFP_DEFAULT;
+				};
+
+				gpio10_pull_up: gpio10_pull_up {
+					pinctrl-single,pins = <
+						GPIO10 AF0
+					>;
+					MFP_LPM_PULL_UP;
 				};
 
 				dvc_pmx_func: dvc_pmx_func {
@@ -1266,7 +1272,7 @@
 		vccmain-supply = <&vccmain>;
 
 		pinctrl-names = "default", "poweron";
-		pinctrl-0 = <&gnss_pmx_def>;
+		pinctrl-0 = <&gnss_pmx_def &gpio10_pull_up>;
 		pinctrl-1 = <&gnss_pmx_power_on>;
 		status = "okay";
 	};
@@ -1282,7 +1288,8 @@
 		vccmain-supply = <&vccmain>;
 
 		pinctrl-names = "default", "poweron";
-		pinctrl-0 = <&gnss_pmx_def &twsi3_pmx_senhb_def &senhb_irq_pins_def>;
+		pinctrl-0 = <&gnss_pmx_def &twsi3_pmx_senhb_def &senhb_irq_pins_def
+				&gpio10_pull_up>;
 		pinctrl-1 = <&gnss_pmx_power_on &twsi3_pmx_senhb>;
 		status = "okay";
 	};
