arch: arm64: enable the isp mmu feature for helan3.
enable the isp mmu for helan3. the version of mmu on ULC1 is 1,the version of mmu on helan3 is 2.

Change-Id: I0f9226b24f3657927226da28f81ef9139de3676e
Signed-off-by: Chunlin Hu <huchl@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908.dtsi
+++ b/arch/arm64/boot/dts/pxa1908.dtsi
@@ -399,6 +399,7 @@
 				 reg = <0xd420F000 0x2ff>;
 				 reg-names = "mmu-regs";
 				 interrupts = <0 15 0x4>;
+				 version = <1>;
 				 status = "disable";
 			};
 
