--- a/arch/arm64/boot/dts/pxa1936.dtsi
+++ b/arch/arm64/boot/dts/pxa1936.dtsi
@@ -445,6 +445,7 @@
 				 reg = <0xd420F000 0x2ff>;
 				 reg-names = "mmu-regs";
 				 interrupts = <0 15 0x4>;
+				 version = <2>;
 				 status = "disable";
 			};
 
