--- a/drivers/mfd/Makefile
+++ b/drivers/mfd/Makefile
@@ -16,7 +16,7 @@ obj-$(CONFIG_MFD_CROS_EC_SPI)	+= cros_ec_spi.o
 obj-$(CONFIG_MFD_MMP_MAP)	+= mmp-map.o
 obj-$(CONFIG_MFD_88PM860)	+= 88pm860-audio.o
 
-88pm88x-objs			:= 88pm88x-core.o 88pm88x-i2c.o 88pm88x-irq.o 88pm88x-dvc.o 88pm88x-debugfs.o 88pm886-table.o 
+88pm88x-objs			:= 88pm88x-core.o 88pm88x-i2c.o 88pm88x-irq.o 88pm88x-dvc.o 88pm88x-debugfs.o 88pm886-table.o 88pm880-table.o
 obj-$(CONFIG_MFD_88PM88X)	+= 88pm88x.o
 
 rtsx_pci-objs			:= rtsx_pcr.o rts5209.o rts5229.o rtl8411.o rts5227.o rts5249.o
