arm64: dts: add fake detection for sr544 on CMTB
Change-Id: I972f90184b27192b60336abdf0b4999dc0d47d7e
Signed-off-by: Jiaquan Su <jqsu@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908-cmtb.dts
+++ b/arch/arm64/boot/dts/pxa1908-cmtb.dts
@@ -68,6 +68,7 @@
 				dphy3 = <0x1500>;
 				dphy5 = <0xff>;
 				dphy6 = <0x1001>;
+				assume_exist = <0x1>;
 				af_2v8-supply = <&ldo11>;
 				avdd_2v8-supply = <&ldo10>;
 				dovdd_1v8-supply = <&buck2>;
