arm64: dts: force external sdcard detection for pxa1908ff
Disable cd-gpios and high speed mode for pxa1908ff external sdcard

Change-Id: Ie9b3a8d87d5d558f811d06981bab8edbfc495843
Signed-off-by: Andy Quan <quanzy@marvell.com>
Signed-off-by: Andy Luo <yifeiluo@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908-ff.dts
+++ b/arch/arm64/boot/dts/pxa1908-ff.dts
@@ -15,6 +15,16 @@
 	compatible = "marvell,pxa1908";
 
 	soc {
+		axi@d4200000 {  /* AXI */
+			/* SD card */
+			sdh0: sdh@d4280000 {
+				cd-gpios = <>;
+				marvell,sdh-dtr-data = <PXA_MMC_TIMING_LEGACY PXA_SDH_DTR_26M PXA_SDH_DTR_52M 0 0 0 0 0>,
+						<PXA_MMC_TIMING_SD_HS PXA_SDH_DTR_52M PXA_SDH_DTR_104M 0 0 0 0 0>,
+						<PXA_MMC_TIMING_MAX PXA_SDH_DTR_PS_NONE PXA_SDH_DTR_104M 0 0 0 0 0>;
+			};
+		};
+
 		apb@d4000000 {
 			pwm2: pwm@d401a400 {
 				compatible = "marvell,pxa25x-pwm";
