arm64: dts: add lpm qos support for soc camera
Change-Id: I63e02f404be6aca0cbf7e1b59435f64506914f7e
Signed-off-by: Chunlin Hu <huchl@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936.dtsi
+++ b/arch/arm64/boot/dts/pxa1936.dtsi
@@ -991,6 +991,7 @@
 		clocks = <&soc_clocks PXA1936_CLK_SC2_AXI_CLK>,
 			<&soc_clocks PXA1936_CLK_SC2_MCLK>;
 		clock-names = "SC2AXICLK", "SC2MCLK";
+		lpm-qos = <PM_QOS_CPUIDLE_BLOCK_AXI>;
 		status = "disabled";
 		reg = <0x0 0x0>;
 	};
@@ -1000,6 +1001,7 @@
 		clocks = <&soc_clocks PXA1936_CLK_SC2_AXI_CLK>,
 			<&soc_clocks PXA1936_CLK_SC2_MCLK>;
 		clock-names = "SC2AXICLK", "SC2MCLK";
+		lpm-qos = <PM_QOS_CPUIDLE_BLOCK_AXI>;
 		status = "disabled";
 		reg = <0x1 0x0>;
 	};
