mfd: 88pm88x: rename all of the subdev name as 88pm88x-*
defconfig has been change accordingly:

drivers/char/88pm886_vbus.c -> drivers/char/88pm88x_vbus.c
drivers/iio/adc/88pm886-gpadc.c -> drivers/iio/adc/88pm88x-gpadc.c
drivers/input/misc/88pm886_onkey.c -> drivers/input/misc/88pm88x_onkey.c
drivers/leds/leds-88pm886.c -> drivers/leds/leds-88pm88x.c
drivers/leds/leds-cfd-88pm886.c -> drivers/leds/leds-cfd-88pm88x.c
drivers/power/88pm886_battery.c -> drivers/power/88pm88x_battery.c
drivers/power/88pm886_charger.c -> drivers/power/88pm88x_charger.c
drivers/regulator/88pm886-buck.c -> drivers/regulator/88pm88x-buck.c
drivers/regulator/88pm886-ldo.c -> drivers/regulator/88pm88x-ldo.c
drivers/rtc/rtc-88pm886.c -> drivers/rtc/rtc-88pm88x.c
sound/soc/codecs/88pm886-headset.c -> sound/soc/codecs/88pm88x-headset.c

Change-Id: I62edf585d3fdd8e6140be46db47eb83d111c1ccf
Signed-off-by: Yi Zhang <yizhang@marvell.com>

--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -32,17 +32,17 @@ config INPUT_88PM80X_ONKEY
 	  To compile this driver as a module, choose M here: the module
 	  will be called 88pm80x_onkey.
 
-config INPUT_88PM886_ONKEY
-	tristate "88PM886 ONKEY support"
+config INPUT_88PM88X_ONKEY
+	tristate "88PM88X ONKEY support"
 	depends on MFD_88PM88X
 	help
-	  Support the ONKEY of Marvell 88PM886 PMICs as an input device
+	  Support the ONKEY of Marvell 88PM88X PMICs as an input device
 	  reporting power button status.
 
 	  Support the feature that "GPIO + LONGONKEY" resets the PMIC
 
 	  To compile this driver as a module, choose M here: the module
-	  will be called 88pm886_onkey.
+	  will be called 88pm88X_onkey.
 
 config INPUT_AB8500_PONKEY
 	tristate "AB8500 Pon (PowerOn) Key"
