--- a/drivers/leds/Makefile
+++ b/drivers/leds/Makefile
@@ -6,7 +6,7 @@ obj-$(CONFIG_LEDS_TRIGGERS)		+= led-triggers.o
 
 # LED Platform Drivers
 obj-$(CONFIG_LEDS_88PM830)		+= leds-88pm830.o
-obj-$(CONFIG_LEDS_88PM886_RGB)		+= leds-88pm886.o
+obj-$(CONFIG_LEDS_88PM88X_RGB)		+= leds-88pm88x.o
 obj-$(CONFIG_LEDS_88PM860X)		+= leds-88pm860x.o
 obj-$(CONFIG_LEDS_ATMEL_PWM)		+= leds-atmel-pwm.o
 obj-$(CONFIG_LEDS_BD2802)		+= leds-bd2802.o
@@ -58,7 +58,7 @@ obj-$(CONFIG_LEDS_MAX8997)		+= leds-max8997.o
 obj-$(CONFIG_LEDS_LM355x)		+= leds-lm355x.o
 obj-$(CONFIG_LEDS_BLINKM)		+= leds-blinkm.o
 obj-$(CONFIG_LEDS_88PM828X)             += leds-88pm828x.o
-obj-$(CONFIG_LEDS_88PM886_CFD)		+= leds-cfd-88pm886.o
+obj-$(CONFIG_LEDS_88PM88X_CFD)		+= leds-cfd-88pm88x.o
 
 # LED SPI Drivers
 obj-$(CONFIG_LEDS_DAC124S085)		+= leds-dac124s085.o
