--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -572,11 +572,11 @@ config SND_SOC_88PM800_HS
 	  for the headset detect
 	  function.
 
-config SND_SOC_88PM886_HS
-	tristate "88pm886 Headset"
+config SND_SOC_88PM88X_HS
+	tristate "88pm88x Headset"
 	depends on MFD_88PM88X
 	help
-	  Say Y if you what use 88pm886 chip
+	  Say Y if you what use 88pm88x chip
 	  for the headset detect
 	  function.
 
