--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -637,11 +637,11 @@ config VBUS_88PM830
 	  This driver can be used by vbus detection and otg booster for usb
 	  subsystem.
 
-config VBUS_88PM886
-	tristate "Marvell VBUS 88PM886 PMIC/charger/fuel-gauge support"
+config VBUS_88PM88X
+	tristate "Marvell VBUS 88PM88X PMIC/charger/fuel-gauge support"
 	depends on MFD_88PM88X
 	help
-	  Say Y here if you have a 88PM886 PMIC/charger/fuel-gauge IC to detect
+	  Say Y here if you have a 88PM88X PMIC/charger/fuel-gauge IC to detect
 	  USB Vbus/IDpin event.
 	  If unsure, say N.
 	  This driver can be used by vbus detection and otg booster for usb
