--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -153,15 +153,15 @@ config RTC_DRV_88PM80X
 	  This driver can also be built as a module. If so, the module
 	  will be called rtc-88pm80x.
 
-config RTC_DRV_88PM886
-	tristate "Marvell 88PM886"
+config RTC_DRV_88PM88X
+	tristate "Marvell 88PM88X"
 	depends on I2C && MFD_88PM88X
 	help
 	  If you say yes here you get support for RTC function in Marvell
-	  88PM886 chips.
+	  88PM88X chips.
 
 	  This driver can also be built as a module. If so, the module
-	  will be called rtc-88pm886.
+	  will be called rtc-88pm88x.
 
 config RTC_DRV_AS3722
 	tristate "ams AS3722 RTC driver"
