arm64: dts: add a common layer for 88pm886/88pm880
88pm88x.dtsi                -> common part for 88pm886/88pm880
88pm886.dtsi                -> 88pm886 chip specific
88pm88x_battery_common.dtsi -> common parameters for 88pm88x charger/fuelgauge
88pm886_pxa1908_dkb.dtsi    -> 88pm886 board level specific
88pm88x_spxxxx.dtsi         -> parameters related with specific battery

Change-Id: Ifb4d581dc88d5e552c5ed4bc44f44bc35fd7f372
Signed-off-by: Yi Zhang <yizhang@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908-dkb.dtsi
+++ b/arch/arm64/boot/dts/pxa1908-dkb.dtsi
@@ -1302,7 +1302,8 @@
 	};
 };
 
+#include "88pm88x.dtsi"
 #include "88pm886.dtsi"
-#include "88pm886_battery_common.dtsi"
-#include "88pm886_sp4555557sa.dtsi"
+#include "88pm88x_battery_common.dtsi"
+#include "88pm88x_sp4555557sa.dtsi"
 #include "88pm886_pxa1908_dkb.dtsi"
