media: i2c: enable 13M size for OV13850 sensor.
add 13M size setting for OV13850

Change-Id: Ia9a59953dcb130ce6a62bd09d091e9e2669f6f38
Signed-off-by: Chunlin Hu <huchl@marvell.com>

--- a/drivers/media/i2c/b52_camera/Kconfig
+++ b/drivers/media/i2c/b52_camera/Kconfig
@@ -6,6 +6,12 @@ config B52_CAMERA_OV13850
 	help
 	  This is a V4L2 camera driver for the ov13850 sensor.
 
+config B52_CAMERA_OV13850_13M
+	tristate "OV13850 13M size support"
+	depends on VIDEO_MMPISP_B52SENSOR && I2C && B52_CAMERA_OV13850
+	help
+	  This is a V4L2 camera driver for the ov13850 13M setting.
+
 config B52_CAMERA_IMX219
 	tristate "imx219 sensor support"
 	depends on VIDEO_MMPISP_B52SENSOR && I2C
