arch: arm64: add ddr constraint for vpu
vpu needs to hold this constraint, to avoid system
enter low power mode

Change-Id: Icf32d044cef0932263f83ff12eac812b133ec3cc
Signed-off-by: Dongjiu Geng <djgeng@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908-dkb.dtsi
+++ b/arch/arm64/boot/dts/pxa1908-dkb.dtsi
@@ -100,6 +100,7 @@
 				compatible = "marvell,power-domain-common-vpu";
 				reg = <0xd4282800 0x1000>;
 				clocks = <&soc_clocks PXA1U88_CLK_VPU>;
+				lpm-qos = <PM_QOS_CPUIDLE_BLOCK_DDR>;
 			};
 
 			pd_smmu: pd_smmu@c0010000 {
