--- a/arch/arm64/boot/dts/pxa1936-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb.dts
@@ -1376,10 +1376,10 @@
 				sc2-i2c-dyn-ctrl;
 				adapter = <0x1>;
 				sensor-pos = <1>;
-				mclk = <26000000>;
-				dphy3 = <0x1500>;
-				dphy5 = <0xff>;
-				dphy6 = <0x1001>;
+				mclk = <24000000>;
+				dphy3 = <0xff4115>;
+				dphy5 = <0x247ff>;
+				dphy6 = <0x4001001>;
 				af_2v8-supply = <&ldo8>;
 				avdd_2v8-supply = <&ldo7>;
 				dovdd_1v8-supply = <&buck2>;
