arch: arm64: enable 13M sensor setting for helan3 defconfig
enable 13M sensor setting for helan3 defconfig

Change-Id: I0881030e94143055b0c927a89d60c0bdbca539c9
Signed-off-by: Chunlin Hu <huchl@marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -2013,6 +2013,7 @@ CONFIG_SOC_CAMERA_SR200=y
 # b52_camera sensor drivers
 #
 CONFIG_B52_CAMERA_OV13850=y
+CONFIG_B52_CAMERA_OV13850_13M=y
 CONFIG_B52_CAMERA_IMX219=y
 CONFIG_B52_CAMERA_OV5648=y
 CONFIG_B52_CAMERA_OV2680=y
