video: mmp: add fl10802 panel driver support
Add driver of panel fl10802.

Change-Id: I11b44e4270c250032c154f7d273f17bc22820325
Signed-off-by: Kun Li <likun@marvell.com>
Signed-off-by: Qiang Liu <qiangliu@marvell.com>

--- a/drivers/video/mmp/panel/Kconfig
+++ b/drivers/video/mmp/panel/Kconfig
@@ -59,6 +59,12 @@ config MMP_PANEL_HX8394
 	help
 		MIPI panel hx8394 support
 
+config MMP_PANEL_FL10802
+	bool "MIPI panel fl10802 support"
+	default n
+	help
+		MIPI panel fl10802 support
+
 config MMP_PANEL_JD9365
 	bool "MIPI Fiti panel JD9365 support"
 	default n
