video: mmp: enable one new panel OTM1284
Add one new panel driver OTM1284.

Change-Id: Ie0b28305601f0b4611f7af5cd07f98b227603f1e
Signed-off-by: Yonghai Huang <huangyh@marvell.com>

--- a/drivers/video/mmp/panel/Kconfig
+++ b/drivers/video/mmp/panel/Kconfig
@@ -70,3 +70,9 @@ config MMP_PANEL_JD9161_HSD5
 	default n
 	help
 		MIPI panel JD9161_HSD5 support
+
+config MMP_PANEL_OTM1284
+	bool "MIPI panel OTM1284 support"
+	default n
+	help
+		MIPI panel OTM1284 support
