--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -2890,8 +2890,8 @@ CONFIG_PXA_RAMDUMP=y
 CONFIG_MRVL_SKMALLOC=y
 CONFIG_SKMALLOC_REBOOT_NOTIFY=y
 CONFIG_MRVL_SKMALLOC_WIRELESS_EN=y
-CONFIG_MRVL_MMP_MODEM=m
-CONFIG_MRVL_MMP_CM3=m
+CONFIG_MRVL_MMP_MODEM=y
+CONFIG_MRVL_MMP_CM3=y
 CONFIG_MRVL_RSV_PAGE=y
 
 #
