arm64: dts: swap virtual key for pxa1908ff
Swap KEY_MENU and KEY_BACK on msg2133 touchsreen for pxa1908ff

Change-Id: I6dbfbf57afd0c5c9071b156b42393e2b4922639c
Signed-off-by: Andy Luo <yifeiluo@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908-ff.dts
+++ b/arch/arm64/boot/dts/pxa1908-ff.dts
@@ -76,6 +76,10 @@
 					status = "disabled";
 				};
 
+				touch2: msg2133@26 {
+					focaltech,virtual_key_cfg = <1>;
+				};
+
 				touch3: 88ms100@720p {
 					status = "disabled";
 				};
