media: i2c: b52-sensor: add OV5670 for pxa1908FF
Change-Id: Iaad74fe6b55484d7af8a1e04d6a929a744335cff
Signed-off-by: Peng Du <pengdu@marvell.com>

--- a/drivers/media/i2c/b52_camera/Kconfig
+++ b/drivers/media/i2c/b52_camera/Kconfig
@@ -47,3 +47,9 @@ config B52_CAMERA_HI551
        depends on VIDEO_MMPISP_B52 && I2C
        help
 	This is a V4L2 camera driver for the hi551 sensor
+
+config B52_CAMERA_OV5670
+       tristate "OV5670 camera support"
+       depends on VIDEO_MMPISP_B52 && I2C
+       help
+       This is a V4L2 camera driver for the ov5670 sensor
