--- a/arch/arm64/boot/dts/pxa1908.dtsi
+++ b/arch/arm64/boot/dts/pxa1908.dtsi
@@ -955,6 +955,12 @@
 		reg = <0x1 0x0>;
 	};
 
+	soc-camera@2 {
+		compatible = "soc-camera-pdrv";
+		status = "disabled";
+		reg = <0x2 0x0>;
+	};
+
 	plat_cam {
 		compatible = "marvell,platform-cam";
 		status = "disabled";
