arm64: dts: 88pm886: correct breath-speed property
Function-Category: [Bug fix]

pm886-rgb-breath-speed property is being read with of_property_read_u8()
in 88pm886 leds driver. Without this patch, it returns -EOVERFLOW.

Change-Id: I0e43d6b6db84d3a0de71f4a283fb84611cb6409a
Signed-off-by: Yaniv agman <yanivag@marvell.com>

--- a/arch/arm64/boot/dts/88pm886_pxa1908_dkb.dtsi
+++ b/arch/arm64/boot/dts/88pm886_pxa1908_dkb.dtsi
@@ -139,7 +139,7 @@
 	       led-name = "led0";
 	       led-trigger-name = "timer";
 	       pm88x-rgb-breath-mode;
-	       pm88x-rgb-breath-speed = <1>;
+	       pm88x-rgb-breath-speed = /bits/ 8 <1>;
 
 	       pm88x-rgb-current = /bits/ 8 <1>; /* 8 mA */
 	       pm88x-rgb-on-percent = /bits/ 8 <50>;
@@ -150,7 +150,7 @@
 	       led-name = "led1";
 	       led-trigger-name = "timer";
 	       pm88x-rgb-breath-mode;
-	       pm88x-rgb-breath-speed = <2>;
+	       pm88x-rgb-breath-speed = /bits/ 8 <2>;
 
 	       pm88x-rgb-current = /bits/ 8 <1>; /* 8 mA */
 	       pm88x-rgb-on-percent = /bits/ 8 <50>;
@@ -160,7 +160,7 @@
 	       led-name = "led2";
 	       led-trigger-name = "timer";
 	       pm88x-rgb-breath-mode;
-	       pm88x-rgb-breath-speed = <2>;
+	       pm88x-rgb-breath-speed = /bits/ 8 <2>;
 
 	       pm88x-rgb-current = /bits/ 8 <1>; /* 8 mA */
 	       pm88x-rgb-on-percent = /bits/ 8 <50>;
