arm64: defconfig: sync pxa1936_defconfig
Change-Id: If20c97e8af6713bc16d4f31417662fd0ff7b720e
Signed-off-by: Tim Wang <wangtt@marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -406,6 +406,7 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 #
 # CONFIG_ARM64_CPUIDLE is not set
 CONFIG_CPU_IDLE_MMP_V8=y
+# CONFIG_PXA1936_LPM is not set
 # CONFIG_ARCH_NEEDS_CPU_IDLE_COUPLED is not set
 # CONFIG_CPU_HOTPLUG_POL_STANDALONE is not set
 CONFIG_NO_HOTPLUG_POLICY=y
@@ -1350,7 +1351,6 @@ CONFIG_TOUCHSCREEN_MSG2133=y
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_88PM80X_ONKEY=y
-CONFIG_INPUT_88PM886_ONKEY=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
 # CONFIG_INPUT_MMA8450 is not set
@@ -1442,7 +1442,6 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_VIBRATOR_88PM80X is not set
 CONFIG_VBUS_88PM80X=y
 CONFIG_VBUS_88PM830=y
-CONFIG_VBUS_88PM886=y
 CONFIG_PXA9XX_AMIPC=y
 CONFIG_VIBRATOR_PWM=y
 CONFIG_PXA9XX_ACIPC=y
@@ -1594,7 +1593,6 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_TEST_POWER is not set
 CONFIG_SW_BATTERY_88PM80X=y
 CONFIG_BATTERY_88PM830=y
-CONFIG_BATTERY_88PM886=y
 # CONFIG_BATTERY_DS2780 is not set
 # CONFIG_BATTERY_DS2781 is not set
 # CONFIG_BATTERY_DS2782 is not set
@@ -1602,7 +1600,6 @@ CONFIG_BATTERY_88PM886=y
 # CONFIG_BATTERY_BQ27x00 is not set
 # CONFIG_BATTERY_MAX17040 is not set
 # CONFIG_BATTERY_MAX17042 is not set
-CONFIG_CHARGER_88PM886=y
 # CONFIG_CHARGER_ISP1704 is not set
 # CONFIG_CHARGER_MAX8903 is not set
 CONFIG_CHARGER_88PM830=y
@@ -1807,7 +1804,7 @@ CONFIG_MFD_88PM860=y
 CONFIG_MFD_88PM830=y
 # CONFIG_MFD_88PM860X is not set
 CONFIG_MFD_MMP_MAP=y
-CONFIG_MFD_88PM886=y
+# CONFIG_MFD_88PM88X is not set
 # CONFIG_MFD_MAX14577 is not set
 # CONFIG_MFD_MAX77686 is not set
 # CONFIG_MFD_MAX77693 is not set
@@ -1859,7 +1856,6 @@ CONFIG_REGULATOR_FIXED_VOLTAGE=y
 # CONFIG_REGULATOR_VIRTUAL_CONSUMER is not set
 # CONFIG_REGULATOR_USERSPACE_CONSUMER is not set
 CONFIG_REGULATOR_88PM800=y
-CONFIG_REGULATOR_88PM886=y
 # CONFIG_REGULATOR_ACT8865 is not set
 # CONFIG_REGULATOR_AD5398 is not set
 # CONFIG_REGULATOR_DA9210 is not set
@@ -2082,6 +2078,7 @@ CONFIG_MMP_PANEL_TD043MGEA1=y
 CONFIG_MMP_PANEL_HX8394=y
 # CONFIG_MMP_PANEL_JD9365 is not set
 # CONFIG_MMP_PANEL_JD9161_HSD5 is not set
+# CONFIG_MMP_PANEL_OTM1284 is not set
 CONFIG_MMP_FB=y
 CONFIG_MMP_FENCE=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
@@ -2156,12 +2153,11 @@ CONFIG_SND_MMP_TDM=y
 CONFIG_SND_MMP_PCM_HOSTLESS=y
 # CONFIG_SND_PXA910_SOC is not set
 CONFIG_SND_MMP_MAP=y
-# CONFIG_SND_PXA_SSP_DUMP is not set
+CONFIG_SND_MMP_MAP_DUMP=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
 CONFIG_SND_MMP_MAP_FE_DAI=y
 CONFIG_SND_SOC_88PM860=y
 CONFIG_SND_SOC_88PM800_HS=y
-CONFIG_SND_SOC_88PM886_HS=y
 # CONFIG_DUAL_SPEAKER is not set
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
@@ -2472,8 +2468,6 @@ CONFIG_LEDS_CLASS=y
 # LED drivers
 #
 CONFIG_LEDS_88PM830=y
-# CONFIG_LEDS_88PM886_RGB is not set
-CONFIG_LEDS_88PM886_CFD=y
 # CONFIG_LEDS_LM3530 is not set
 CONFIG_LEDS_LM3532=y
 # CONFIG_LEDS_LM3642 is not set
@@ -2537,7 +2531,6 @@ CONFIG_RTC_INTF_DEV=y
 # I2C RTC drivers
 #
 CONFIG_RTC_DRV_88PM80X=y
-CONFIG_RTC_DRV_88PM886=y
 # CONFIG_RTC_DRV_DS1307 is not set
 # CONFIG_RTC_DRV_DS1374 is not set
 # CONFIG_RTC_DRV_DS1672 is not set
@@ -2764,7 +2757,6 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 # CONFIG_MCP3422 is not set
 # CONFIG_NAU7802 is not set
 # CONFIG_TI_ADC081C is not set
-CONFIG_88PM886_GPADC=y
 
 #
 # Amplifiers
