--- a/arch/arm64/boot/dts/pxa1908-dkb.dtsi
+++ b/arch/arm64/boot/dts/pxa1908-dkb.dtsi
@@ -242,7 +242,11 @@
 						SDHCI_QUIRK2_TIMEOUT_SHORT
 						)>;
 				marvell,sdh-host-caps = <(MMC_CAP_1_8V_DDR)>;
-				marvell,sdh-host-caps2 = <(MMC_CAP2_DISABLE_BLK_ASYNC)>;
+				marvell,sdh-host-caps2 = <(
+						MMC_CAP2_DISABLE_BLK_ASYNC |
+						MMC_CAP2_SKIP_SD |
+						MMC_CAP2_SKIP_SDIO
+						)>;
 				marvell,sdh-flags = <(
 						PXA_FLAG_NEW_RX_CFG_REG |
 						PXA_FLAG_SD_8_BIT_CAPABLE_SLOT |
@@ -285,6 +289,10 @@
 						SDHCI_QUIRK2_TUNING_ADMA_BROKEN |
 						SDHCI_QUIRK2_TIMEOUT_SHORT
 						)>;
+				marvell,sdh-host-caps2 = <(
+						MMC_CAP2_SKIP_MMC |
+						MMC_CAP2_SKIP_SDIO
+						)>;
 				marvell,sdh-flags = <(
 						PXA_FLAG_NEW_RX_CFG_REG |
 						PXA_FLAG_TX_SEL_BUS_CLK |
@@ -318,7 +326,11 @@
 						SDHCI_QUIRK2_TIMEOUT_SHORT
 						)>;
 				marvell,sdh-pm-caps = <(MMC_PM_KEEP_POWER)>;
-				marvell,sdh-host-caps2 = <(MMC_CAP2_NO_VOLTAGE_SWITCH)>;
+				marvell,sdh-host-caps2 = <(
+						MMC_CAP2_NO_VOLTAGE_SWITCH |
+						MMC_CAP2_SKIP_MMC |
+						MMC_CAP2_SKIP_SD
+						)>;
 				marvell,sdh-flags = <(
 						PXA_FLAG_NEW_RX_CFG_REG |
 						PXA_FLAG_WAKEUP_HOST |
