arm64: dts: correct mfp configuration for pm830
on pxa1936 DKB, we need to select mfp alternative
function 0 for gpio4, gpio19 and gpio124.

Change-Id: I55b715b8641d753e35428f8a11f6402ead27c702
Signed-off-by: Fenghang Yin <yinfh@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1936-dkb.dts
@@ -443,12 +443,18 @@
 					DS_MEDIUM;PULL_NONE;EDGE_BOTH;LPM_NONE;
 				};
 				pmic1_pins: pinmux_88pm830_pins {
-					pinctrl-single,pins = <GPIO4 GPIO19 GPIO124>;
+					pinctrl-single,pins = <
+						GPIO4   AF0
+						GPIO19  AF0
+						GPIO124 AF0
+					>;
 					MFP_DEFAULT;
 				};
 
 				pmic1_pins_sleep: pinmux_88pm830_pins_sleep {
-					pinctrl-single,pins = <GPIO4>;
+					pinctrl-single,pins = <
+						GPIO4 AF0
+					>;
 					DS_MEDIUM;PULL_NONE;EDGE_BOTH;LPM_NONE;
 				};
 
